--- a/css/bases1.css
+++ b/css/bases1.css
@@ -35,7 +35,6 @@
 body {
 	font-family: var(--open-sans);
 }
-
 .container  {
     padding-right: 6%;
     padding-left: 6%;
@@ -87,4 +86,79 @@ body {
     color: var(--boton-rojo);
     border-color: var(--boton-rojo);
     margin: 0 auto ;
+}
+
+/*diferenciales*/
+.diferenciales__item{
+    max-width: 350px;
+    box-sizing: border-box;
+    padding: 2rem 0 2rem 5rem;
+    background-repeat: no-repeat;
+    background-position: top 1.25rem left 2.5rem;
+    
+}
+.item__titulo{
+    color: var(--fuente-ceniza-oscuro);
+    font-weight: 700;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    margin-bottom: 1.5rem;
+}
+.item__texto{
+    line-height: normal;
+}
+/*iconos diferenciales*/
+.diferenciales__item-reloj{
+    background-image: url(../img/icono-reloj.png);
+}
+.diferenciales__item-dinero{
+    background-image: url(../img/icono-dinero.png);
+}
+.diferenciales__item-quimica{
+    background-image: url(../img/icono-quimica.png);
+}
+/*About apeperia*/
+.sobre_nosotros{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+.sobre_nosotros__titulo{
+    color: var(--fuente-ceniza-oscuro);
+    font-weight: 700;
+    font-size: 1.5rem;
+    font-family: var(--monserrat);
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 1.25rem;
+}
+.sobre_nosotros__texto{
+    line-height: normal;
+    margin-bottom: 1rem;
+}
+.sobre_nosotros__plataformas{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 1rem;
+}
+.sobre_nosotros__texto--destacado{
+    color: var(--fuente-ceniza-oscuro);
+    font-weight: 700;
+}
+.sobre_nosotros__imagen{
+    display: none;
+}
+
+@media screen and (min-width:1024px) {
+    .diferenciales {
+        background-color: var(--background-ceniza-claro);
+        display: flex;
+        justify-content: space-around;  
+    }
+/*
+    .sobre_nosotros__imagen {
+        display: block;
+        float: right;
+        max-width: 13rem;        
+    }
 }
