--- a/css/planes.css
+++ b/css/planes.css
@@ -1,10 +1,9 @@
+/*continuacion de planes, contacto banner e institucional*/
 .planes {
     background-color: var(--background-ceniza-claro);
-    
     padding-top: 3rem;
     padding-bottom: 3rem;
 }
-
 .planes__titulo {
     color: var(--fuente-ceniza-oscuro);
     font-weight: 700;
@@ -12,95 +11,211 @@
     font-family: var(--montserrat);
     text-transform: uppercase;
     text-align: center;
-
     margin-bottom: 1.25rem;
 }
-
 .planes__tarjetas {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
 .tarjetas {
     display: flex;
     flex-direction: column;
-
     background-color: var(--background-blanco);
-
     width: 100%;
     max-width: 300px;
-
     margin-bottom: 2rem;
-
     border-radius: 5px;
     box-shadow: 0 2px 10px 2px #00000010;
 }
-
 .tarjetas__titulo {
     font-weight: 700;
     font-size: 1.5rem;
     text-align: center;
-
     padding: .75rem 0;
-
     margin-bottom: .5rem;
-
     border-bottom: 1px solid var(--background-azul-claro);
 }
-
 .tarjetas__contenido {
     padding: 0 15%;
 }
-
 .tarjetas__precio {
     font-weight: 700;
     font-size: 3rem;
     text-align: center;
-
     margin-top: 1.25rem;
     margin-bottom: 1.25rem;
 }
-
 .tarjetas__texto {
-    color: var(--fuente-ceniza-claro);
+    color: var(--fuente-ceniza-oscuro);
     line-height: 28px;
 }
-
 .tarjetas__boton {
     font-size: 1.2rem;
     font-weight: 700;
-
     width: 100%;
-
     align-self: center;
-
     padding: .75rem 2rem;
-
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
-
 .tarjetas--start {
     color: var(--planes-card-start);
 }
-
 .tarjetas--ultra {
     color: var(--planes-card-ultra);
 }
-
 .tarjetas--mega {
     color: var(--planes-card-mega);
 }
-
 .tarjetas__boton--start {
     border-color: var(--planes-card-start);
 }
-
 .tarjetas__boton--ultra {
     border-color: var(--planes-card-ultra);
 }
-
 .tarjetas__boton--mega {
     border-color: var(--planes-card-mega);
+}
+/*contacto banner*/
+.contacto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.contacto__titulo {
+    color: var(--fuente-ceniza-oscuro);
+    font-weight: 700;
+    font-size: 1.5rem;
+    font-family: var(--montserrat);
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 1.25rem;
+}
+.contacto__boton {
+    color: var(--boton-rojo);
+    border-color: var(--boton-rojo);
+    margin-top: 1.25rem;
+}
+/*intitucional*/
+.institucional {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--fuente-ceniza-oscuro);
+    text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.institucional__titulo {
+    color: var(--fuente-ceniza-oscuro);
+    font-weight: 700;
+    font-size: 1.5rem;
+    font-family: var(--montserrat);
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+.institucional__descripcion {
+    margin-bottom: 2rem;
+}
+.institucional__direccion {
+    font-size: 1.5rem;
+    line-height: normal;
+    margin-bottom: 2rem;
+}
+.institucional__contacto {
+    font-size: 1.2rem;
+    line-height: 1.8;
+    margin-top: 2rem;
+}
+.institucional__contacto-telefono {
+    line-height: normal;
+}
+.institucional__contacto-email {
+    color: var(--fuente-ceniza-oscuro);
+    text-decoration: underline;
+    display: block;
+}
+.institucional__video {
+    width: 100vw;
+}
+/*pie de pagina*/
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--background-footer);
+    padding-top: 2.5rem;
+    padding-bottom: 2rem;
+}
+.footer__social {
+    display: flex;
+}
+.footer__midia {
+    display: block;
+    width: 42px;
+    height: 42px;
+    margin: 2rem 1rem;
+}
+.footer__navegacion {
+    color: var(--background-blanco);
+    text-align: center;
+    line-height: 3;
+}
+.footer__enlace {
+    display: inline-block;
+    margin: 0 .5rem .7rem;
+}.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--background-footer);
+    padding-top: 2.5rem;
+    padding-bottom: 2rem;
+}
+.footer__social {
+    display: flex;
+}
+.footer__midia {
+    display: block;
+    width: 42px;
+    height: 42px;
+    margin: 2rem 1rem;
+}
+.footer__navegacion {
+    color: var(--background-blanco);
+    font: var(--open-sans);
+    text-align: center;
+    line-height: 3;
+}
+.footer__enlace {
+    display: inline-block;
+    margin: 0 .5rem .7rem;
+}
+
+@media screen and (min-width:768px) {
+    .tarjetas{
+        max-width: 400px;
+    }
+    .institucional__contacto-email{
+        display: inline-block;
+    }
+    .institucional__video{
+        width: 100%;
+    }
+}
+@media screen and (min-width:1024px){
+    .planes__tarjetas{
+        flex-direction:row;
+        justify-content: space-around;
+        align-items: flex-end;
+        .tarjetas{
+            max-width: 300px;
+        }
+
+    }
 }
